--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,10 @@ sensors:
         poll: 60
         mqtt:
           topic: brompton/living-room/pressure
+      - metric: air_quality
+        poll: 90
+        mqtt:
+          topic: brompton/living-room/air_quality
 
 #  - type: BME280
 #    id: 1
