--- a/config.yaml
+++ b/config.yaml
@@ -27,9 +27,9 @@ leds:
       b: 24
     notifications:
       allow:
-        - sunrise
+        - after_sunrise
       deny:
-        - sunset
+        - after_sunset
     mqtt:
       topics:
         - topic: brompton/living-room/temperature
@@ -49,7 +49,7 @@ leds:
             red: 255
             green: 215
             blue: 0
-          type: blink
+          type: flash
 
 #  - type: BME280
 #    id: 1
