--- a/config.yaml
+++ b/config.yaml
@@ -37,13 +37,13 @@ leds:
             red: 0
             green: 255
             blue: 0
-          style: pulse
+          style: flash
         - topic: brompton/living-room/humidity
           colour:
             red: 0
             green: 255
             blue: 0
-          style: pulse
+          style: flash
         - topic: brompton/living-room/pressure
           colour:
             red: 255
