Test new sun tracker

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ MQTT_PASSWORD="password"
 MQTT_PROVIDER="provider"
 MQTT_HOST="host"
 MQTT_PORT=1883
+LOCATION_LATITUDE=12345.6789
+LOCATION_LONGITUDE=12345.6789
