--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,23 @@ sensors:
         poll: 60
         mqtt:
           topic: brompton/living-room/pressure
+
+  - type: BME680
+    id: 2
+    address: 0x77
+    metrics:
+      - metric: temperature
+        poll: 20
+        mqtt:
+          topic: brompton/living-room-two/temperature
+      - metric: humidity
+        poll: 20
+        mqtt:
+          topic: brompton/living-room-two/humidity
+      - metric: pressure
+        poll: 60
+        mqtt:
+          topic: brompton/living-room-two/pressure
 #      - metric: air_quality
 #        poll: 900
 #        mqtt:
