Clean up requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-w1thermsensor==1.0.5
-paho-mqtt==1.3.1
-python-dotenv==0.8.1
-Adafruit-BME280==1.0.1
-PyYAML==3.12
-APScheduler==3.5.1
-bme680==1.0.4
-RPi.GPIO==0.6.3
-astral==1.2
+w1thermsensor==1.*
+paho-mqtt==1.3.*
+python-dotenv==0.8.*
+Adafruit-BME280==1.0.*
+PyYAML==3.*
+APScheduler==3.5.*
+bme680==1.0.*
+RPi.GPIO==0.6.*
+astral==1.*
 git+https://github.com/palto42/SunriseSunsetCalculator.git
-RPIO==0.10.0
+RPIO==0.10.*
 pytest
