Move client ID to env

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ MQTT_PASSWORD="password"
 MQTT_PROVIDER="provider"
 MQTT_HOST="host"
 MQTT_PORT=1883
+MQTT_CLIENT_ID="client-name"
 LOCATION_LATITUDE=12345.6789
 LOCATION_LONGITUDE=12345.6789
