--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 ds18b20==0.01.03
-paho-mqtt==1.3.*
-python-dotenv==0.8.*
-Adafruit-BME280==1.0.*
-PyYAML==3.*
-APScheduler==3.5.*
-bme680==1.0.*
-RPi.GPIO==0.6.*
-astral==1.*
+paho-mqtt==1.3.1
+python-dotenv==0.9.0
+Adafruit-BME280==1.0.1
+PyYAML==3.13
+APScheduler==3.5.1
+bme680==1.0.5
+RPi.GPIO==0.6.3
+astral==1.6.1
 git+https://github.com/palto42/SunriseSunsetCalculator.git
-RPIO==0.10.*
+RPIO==0.10.0
 pytest
 Adafruit_CCS811==0.1
 blinker==1.4
