--- a/config.example.yaml
+++ b/config.example.yaml
@@ -54,3 +54,20 @@ sensors:
         poll: 20
         mqtt:
           topic: brompton/living-room-four/temperature
+
+  - type: PMS5003
+    id: 5
+    address: /dev/ttyAMA0
+    metrics:
+      - metric: pm1.0
+        poll: 60
+        mqtt:
+          topic: brompton/outside/particulate_matter/1.0
+      - metric: pm2.5
+        poll: 60
+        mqtt:
+          topic: brompton/outside/particulate_matter/2.5
+      - metric: pm10.0
+        poll: 60
+        mqtt:
+          topic: brompton/outside/particulate_matter/10.0
