--- a/config.example.yaml
+++ b/config.example.yaml
@@ -59,15 +59,7 @@ sensors:
     id: 5
     address: /dev/ttyAMA0
     metrics:
-      - metric: pm1.0
+      - metric: particulate_matter
         poll: 60
         mqtt:
-          topic: brompton/outside/particulate_matter/1.0
-      - metric: pm2.5
-        poll: 60
-        mqtt:
-          topic: brompton/outside/particulate_matter/2.5
-      - metric: pm10.0
-        poll: 60
-        mqtt:
-          topic: brompton/outside/particulate_matter/10.0
+          topic: brompton/outside/particulate_matter
